saludoapp-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saludoapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: saludoapp
  template:
    metadata:
      labels:
        app: saludoapp
        version: "0.0.1"
    spec:
      containers:
      - name: saludoapp
        image: fredyball/saludoapp:0.0.1
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saludoapp-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saludoapp
  template:
    metadata:
      labels:
        app: saludoapp
        version: "0.0.2"
    spec:
      containers:
      - name: saludoapp
        image: fredyball/saludoapp:0.0.2
        ports:
        - containerPort: 80
