saludoapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saludoapp
spec:
  selector:
    app: saludoapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
